<resources>
    <string name="app_name">21SOECA21048</string>
    <string name="_21soeca21048">21SOECA21048</string>
    <string name="kishan">Kishan</string>
    <string name="sakhiya">Sakhiya</string>
    <string name="vitthlbhai">Vitthlbhai</string>
    <string name="email">ksakhiya622@rku.ac.in</string>
    <string name="password">123</string>
    <string name="city">Rajkot</string>
    <string name="Gender">Male</string>
</resources>